# compiler-internals

./: README.md  computer-architecture.md  debuginfo.md  programming-microchip.md
.github/workflows/: build-llvm-pass-plugin.yml
QnA/: README.md  controlflowgraph.h  finding-loops.md  findloops.cpp  instruction-scheduling.md  performance-analysis.md
QnA/profiling/: profile001.callgraph.out  sample-profiling.sh  sample.cpp
gcc/: README.md
llvm/: README.md
llvm/exercises/: gen-ir.cpp
llvm/pass-plugin/: README.md
llvm/pass-plugin/dump-variables/: CMakeLists.txt
llvm/pass-plugin/dump-variables/src/: CMakeLists.txt  DumpVariables.cpp  DumpVariables.h
